UI/Bugfix: Prevent new selection bar from squashing Save Changes button under its z-index.
git-svn-id: http://plugins.svn.wordpress.org/feedwordpress/trunk@284693 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/feedwordpress-elements.css
+++ b/feedwordpress-elements.css
@@ -321,6 +321,7 @@ table.twofer td.secondary { padding-left: 10px; width: 30%; }
 .feedwordpress-admin {
 	position: relative;
 }
+.feedwordpress-admin .submit { position: relative; z-index: 40; }
 
 #feedwordpress-admin-syndication .heads-up {
 	background-color: #d0d0d0;
